--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -53,6 +54,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //dagger-hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+
+    // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
