--- a/VitalzApp/app/src/main/AndroidManifest.xml
+++ b/VitalzApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.technoidentity.vitalz">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,9 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VitalzApp">
         <activity android:name=".user_selection.UserSelectionActivity" />
-        <activity
-            android:name=".device.DashboardActivity"
-            android:label="@string/title_activity_dashboard" />
+
         <activity android:name=".device.DeviceActivity" />
         <activity android:name=".add_device.AddDeviceActivity" />
         <activity android:name=".otp_confirm.OtpConformActivity" />
