--- a/VitalzApp/app/src/main/AndroidManifest.xml
+++ b/VitalzApp/app/src/main/AndroidManifest.xml
@@ -9,28 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VitalzApp">
-        <activity android:name=".tab.login.LoginActivity"></activity>
+        <activity android:name=".tab.login.LoginActivity"/>
         <activity android:name=".user_selection.UserSelectionActivity" />
-        <activity
-            android:name=".device.DashboardActivity"
-            android:label="@string/title_activity_dashboard" />
         <activity android:name=".device.DeviceActivity" />
         <activity android:name=".add_device.AddDeviceActivity" />
-        <activity android:name=".otp_confirm.OtpConformActivity" />
-        <activity android:name=".request_otp.RequestOtpActivity" />
-        <activity android:name=".splash_screen.SplashScreenActivity">
+        <activity android:name=".otp_confirm.OtpConformActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".request_otp.RequestOtpActivity"></activity>
+        <activity android:name=".splash_screen.SplashScreenActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
