--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -31,11 +31,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_12
-        targetCompatibility JavaVersion.VERSION_12
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '12'
+        jvmTarget = '1.8'
     }
 }
 
