--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -15,12 +14,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.technoidentity.vitalz"
-        minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
+        applicationId names.applicationId
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
+        versionCode versions.versionCode
+        versionName versions.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -42,15 +40,38 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha05"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
+
+    //UI
+    implementation "androidx.appcompat:appcompat:${library.appCompat}"
+    implementation "androidx.core:core-ktx:${library.ktx}"
+    implementation "androidx.constraintlayout:constraintlayout:${library.constarintLayout}"
+    implementation "com.google.android.material:material:${library.material}"
+
+    //Fragment
+    implementation "androidx.fragment:fragment-ktx:${library.fragment_ktx}"
+
+    //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:${library.lifeCycle}"
+    kapt "androidx.lifecycle:lifecycle-compiler:${library.lifeCycle}"
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:${library.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${library.navigation}"
+
+    //network
+    implementation "com.squareup.okhttp3:logging-interceptor:${library.logging_interceptor}"
+    implementation "com.squareup.retrofit2:retrofit:${library.retrofit}"
+    implementation "com.squareup.retrofit2:converter-gson:${library.retrofit}"
+
+    //Gson
+    implementation "com.google.code.gson:gson:${library.gson}"
+
+    //livedata
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${library.lifeCycle}"
+
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${library.kotlinx_coroutines_core}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${library.kotlinx_coroutines_android}"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${library.retrofit2_kotlin_coroutines_adapter}"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
@@ -60,8 +81,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+    //Dagger-Hilt
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
 
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.1.0"
@@ -74,12 +96,6 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
-    //retrofit & Gson
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -88,13 +104,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation "com.google.android.gms:play-services-places:17.0.0"
 
-    //live data and viewModel
-    ext.lifecycle_version = "2.2.0"
+    //viewModel
     ext.compiler_version = '3.0.0-beta6'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    // DataBinding
-    kapt "com.android.databinding:compiler:$compiler_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${library.lifeCycle}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:${library.lifeCycle}"
+
 }
