--- a/VitalzApp/build.gradle
+++ b/VitalzApp/build.gradle
@@ -1,7 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.31"
-    ext.hilt_version = "2.28-alpha"
+    ext.kotlin_version = "1.4.30"
+    ext.hilt_version = "2.33-beta"
+
+    ext.versions = [
+            'compileSdk' : 30,
+            'buildTools' : "30.0.0",
+            'minSdk'     : 21,
+            'targetSdk'  : 30,
+            'versionCode': 1,
+            'versionName': "1.0"
+    ]
+    ext.names = [
+            'applicationId': 'com.technoidentity.vitalz'
+    ]
+    ext.library = [
+            'appCompat'          : '1.2.0',
+            'ktx'                : '1.3.2',
+            'constarintLayout'   : '2.0.2',
+            'fragment_ktx'       : '1.3.2',
+            'lifeCycle'          : '2.2.0',
+            'room_version'       : '2.2.3',
+            'material'           : '1.4.0-alpha01',
+            'navigation'         : '2.3.4',
+            'retrofit'           : '2.9.0',
+            'logging_interceptor': '4.8.1',
+            'gson'               : '2.8.6',
+            'picasso'            : '2.71828',
+            'kotlinx_coroutines_core' : '1.3.9',
+            'kotlinx_coroutines_android' :'1.4.1',
+            'retrofit2_kotlin_coroutines_adapter' : '0.9.2',
+            'nav_version'        :'2.3.0'
+    ]
 
     repositories {
         google()
