--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -109,4 +109,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${library.lifeCycle}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:${library.lifeCycle}"
 
+    //graph
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
