--- a/VitalzApp/build.gradle
+++ b/VitalzApp/build.gradle
@@ -51,6 +51,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
