--- a/VitalzApp/app/src/main/AndroidManifest.xml
+++ b/VitalzApp/app/src/main/AndroidManifest.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.technoidentity.vitalz">
+    package="com.technoidentity.vitalz">
 
-  <application
-    android:name=".MyApplication"
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/Theme.VitalzApp">
-    <activity android:name=".tab.login.LoginActivity" />
-    <activity android:name=".user_selection.UserSelectionActivity" />
-    <activity android:name=".device.DeviceActivity" />
-    <activity android:name=".add_device.AddDeviceActivity" >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-    <activity android:name=".otp_confirm.OtpConformActivity">
-    </activity>
-    <activity android:name=".request_otp.RequestOtpActivity" />
-    <activity android:name=".splash_screen.SplashScreenActivity" />
-  </application>
+    <application
+        android:name=".MyApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.VitalzApp">
+        <activity android:name=".home.HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+            <activity android:name=".user.UserActivity"/>
+        <!--    <activity android:name=".request_otp.RequestOtpActivity" />-->
+        <!--    <activity android:name=".splash_screen.SplashScreenActivity" />-->
+    </application>
 </manifest>
