--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
-    dataBinding {
+    viewBinding {
         enabled = true
     }
 
