--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -53,9 +55,13 @@ dependencies {
     //Lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:${library.lifeCycle}"
     kapt "androidx.lifecycle:lifecycle-compiler:${library.lifeCycle}"
+
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:${library.navigation}"
     implementation "androidx.navigation:navigation-ui-ktx:${library.navigation}"
+
+    //Logging
+    implementation "com.jakewharton.timber:timber:${library.timber}"
 
     //network
     implementation "com.squareup.okhttp3:logging-interceptor:${library.logging_interceptor}"
