Heart Line Graph Implemented

--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
-    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -117,5 +116,7 @@ dependencies {
 
     //graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
