--- a/VitalzApp/build.gradle
+++ b/VitalzApp/build.gradle
@@ -20,7 +20,7 @@ buildscript {
             'constarintLayout'   : '2.0.2',
             'fragment_ktx'       : '1.3.2',
             'lifeCycle'          : '2.2.0',
-            'room_version'       : '2.2.3',
+            'roomVersion'       : '2.3.0',
             'material'           : '1.4.0-alpha01',
             'navigation'         : '2.3.4',
             'retrofit'           : '2.9.0',
