--- a/VitalzApp/app/build.gradle
+++ b/VitalzApp/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -42,6 +43,18 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // FCM
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')
+
+    //messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
+    // Add the dependency for the Firebase SDK for Google Analytics 
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //UI
     implementation "androidx.appcompat:appcompat:${library.appCompat}"
